[tool.poetry]
name = "load_testing"
version = "0.1.0"
description = ""
authors = ["Prabal Pathak <prabal01pathak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.5.0"
rich = "^12.4.4"
opencv-python = "^4.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
