[tool.poetry]
name = "load_testing"
version = "0.1.0"
description = ""
authors = ["Prabal Pathak <prabal01pathak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10, <3.11"
typer = "^0.5.0"
rich = "^12.4.4"
opencv-python = "^4.6.0"
loguru = "^0.6.0"
pandas = "^1.4.3"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
requests = "^2.28.1"
easydict = "^1.9"
tensorflow = "^2.9.1"
psutil = "^5.9.1"
GPUtil = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
black = {version = "^22.6.0", allow-prereleases = true}
pylint = "^2.14.4"
ptpython = "^3.0.20"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
